--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -20,7 +20,7 @@
         <article>Works 2</article>
         <article>Works 3</article>    
     </section>
-    <section><h2>About us</h2></section>
+    <section><h2>About Us</h2></section>
     <section>
         <h2>Latest news</h2>
         <article>Article 1</article>
