--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -29,7 +29,7 @@
         <article><h3>Personal Brand</h3></article>    
     </section>
     <section>
-        <h2>About us</h2>
+        <h2>About Us</h2>
         <h3>Who are we</h3>
         <h3>Our culture</h3>
         <h3>How we work</h3>
