--- a/html_advanced/8-index.html
+++ b/html_advanced/8-index.html
@@ -12,28 +12,28 @@
     <header><nav></nav></header>
     <main>
     <h1>Homepage</h1>
-    <section><h2>We help you build your brand!</h2></section>
-    <section><h2>Services</h2></section>
+    <section>Hero section</section>
+    <section>Services section</section>
     <section>
-        <h2>Works</h2>
+        Works section
         <article>Works 1</article>
         <article>Works 2</article>
         <article>Works 3</article>    
     </section>
-    <section><h2>About us</h2></section>
+    <section>About section</section>
     <section>
-        <h2>Latest news</h2>
+        Latest news section
         <article>Article 1</article>
         <article>Article 2</article>
         <article>Article 3</article>  
     </section>
     <section>
-        <h2>Testimonials</h2>
+        Testimonials section
         <article>Testimonial 1</article>
         <article>Testimonial 2</article>
         <article>Testimonial 3</article>  
     </section>
-    <section><h2>Contact</h2></section>
+    <section>Contact section</section>
 
     </main>
     <footer>Footer</footer>
