--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -9,15 +9,23 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
+    <!-- ********************** HEADER
+	  -->
     <header>
         <div>
             <span>Techium</span>
             <nav></nav>
         </div>
     </header>
+    <!-- ********************** MAIN
+	  -->
     <main>
     <h1>Homepage</h1>
+    <!-- ********************** Hero section
+	  -->
     <section><div><h2>We help you build your brand!</h2></div></section>
+    <!-- ********************** Services section
+	  -->
     <section>
         <div>
         <header>
@@ -36,6 +44,8 @@
         </div>
         </div>
     </section>
+    <!-- ********************** Works section
+	  -->
     <section>
         <div>
         <header>
@@ -49,6 +59,8 @@
         </div>
         </div>    
     </section>
+    <!-- ********************** Abaut Us section
+	  -->
     <section>
         <div>
         <header>
@@ -82,6 +94,8 @@
         </div>
         </div>
     </section>
+    <!-- ********************** Latest news section
+	  -->
     <section>
         <div>
         <header>
@@ -121,6 +135,8 @@
         </div>
         </div>  
     </section>
+    <!-- ********************** Testimonials section
+	  -->
     <section>
         <div>
         <header>
@@ -136,6 +152,8 @@
         </div>
         </div>  
     </section>
+    <!-- ********************** Contact section
+	  -->
     <section>
         <div>
         <header>
@@ -154,6 +172,8 @@
     </section>
 
     </main>
+    <!-- ********************** Footer
+	  -->
     <footer>
         <div>
         Footer
