--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -9,23 +9,19 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <!-- ********************** HEADER
-	  -->
+    <!-- Header -->
     <header>
         <div>
             <span>Techium</span>
             <nav></nav>
         </div>
     </header>
-    <!-- ********************** MAIN
-	  -->
+    <!-- Main -->
     <main>
     <h1>Homepage</h1>
-    <!-- ********************** Hero section
-	  -->
+    <!-- Hero section -->
     <section><div><h2>We help you build your brand!</h2></div></section>
-    <!-- ********************** Services section
-	  -->
+    <!-- Services section -->
     <section>
         <div>
         <header>
@@ -44,8 +40,7 @@
         </div>
         </div>
     </section>
-    <!-- ********************** Works section
-	  -->
+    <!-- Works section -->
     <section>
         <div>
         <header>
@@ -59,8 +54,7 @@
         </div>
         </div>    
     </section>
-    <!-- ********************** Abaut Us section
-	  -->
+    <!-- Abaut Us section -->
     <section>
         <div>
         <header>
@@ -94,8 +88,7 @@
         </div>
         </div>
     </section>
-    <!-- ********************** Latest news section
-	  -->
+    <!-- Latest news section -->
     <section>
         <div>
         <header>
@@ -135,8 +128,7 @@
         </div>
         </div>  
     </section>
-    <!-- ********************** Testimonials section
-	  -->
+    <!-- Testimonials section -->
     <section>
         <div>
         <header>
@@ -152,8 +144,7 @@
         </div>
         </div>  
     </section>
-    <!-- ********************** Contact section
-	  -->
+    <!-- Contact section -->
     <section>
         <div>
         <header>
@@ -172,8 +163,7 @@
     </section>
 
     </main>
-    <!-- ********************** Footer
-	  -->
+    <!-- Footer -->
     <footer>
         <div>
         Footer
