--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -54,7 +54,7 @@
         </div>
         </div>    
     </section>
-    <!-- Abaut Us section -->
+    <!-- About Us section -->
     <section>
         <div>
         <header>
