--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -13,9 +13,9 @@
     <header>
         <div>
             <div>
-            <link
+            <li href="/">
             <span>Techium</span>
-            <
+            </li>
             </div>
             <nav></nav>
         </div>
