--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -13,18 +13,20 @@
     <header>
         <div>
             <div>
-            <li href="/">
+            <a href="/">
             <span>Techium</span>
-            </li>
+            </a>
             </div>
             <nav>
-            <a href="/">Home</a>
-            <a href="/">Services</a>
-            <a href="">Works</a>
-            <a href="">About</a>
-            <a href="">Latest news</a>
-            <a href="">Testimonials</a>
-            <a href="">Contact</a>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#latest_news">Latest news</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </div>
     </header>
