--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -17,7 +17,17 @@
             <span>Techium</span>
             </a>
             </div>
-            <nav></nav>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#latest_news">Latest news</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <!-- Main -->
@@ -170,7 +180,9 @@
     <!-- Footer -->
     <footer>
         <div>
-        Footer
+            <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+            <a href="https://twitter.com/holbertonschool">Twitter</a>
+            <a href="https://www.instagram.com/holbertonschool/">Instagram</a>"
         </div>
     </footer>
 </body>
