--- a/html_advanced/24-index.html
+++ b/html_advanced/24-index.html
@@ -148,8 +148,8 @@
         <div>
             <ul>
             <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-            <li></li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-            <li></li><a href="https://www.instagram.com/holbertonschool/">Instagram</a>"</li>
+            <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+            <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a>"</li>
             </ul>
         </div>
     </footer>
