--- a/html_advanced/styleguide.html
+++ b/html_advanced/styleguide.html
@@ -184,7 +184,7 @@
                 <h2>Iframe</h2>
             </header>
             <div>
-                <iframe src="https://www.youtube.com/embed/41N6bKO-NVI" width="350" height="200" title="Holberton School" frameborder="0"></iframe>
+                <iframe src="https://www.youtube.com/embed/41N6bKO-NVI" width="350" height="200" title="Holberton School" frameborder="0">Holberton Sally</iframe>
             </div>
         </section>
     </main>
